<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/Layout_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/small_padding">

    <TextView
        android:id="@+id/name_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/name"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/Nickname_edit"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="hmm"
        android:ems="10"
        android:hint="@string/What_is_your_nickname"
        android:inputType="textPersonName|textImeMultiLine"
        android:textAlignment="center"
        android:textColorHint="#78909C" />

    <Button
        android:id="@+id/done_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/Layout_margin"
        android:fontFamily="@font/roboto"
        android:text="@string/Done"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nickname_text"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/Welcome_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Layout_margin"
        android:contentDescription="@string/Welcome_icon"
        app:srcCompat="@android:drawable/ic_menu_myplaces"
        tools:ignore="ImageContrastCheck" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/Layout_margin">

        <TextView
            android:id="@+id/bio_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio" />
    </ScrollView>

</LinearLayout>